# PyTorchIntroduction

./: .gitignore  Dockerfile  docker-compose.yml  initializer.py  pyproject.toml
1/1/torch1_1/: pyproject.toml
1/1/torch1_1/tests/: test_torch1_1.py
app/config/: setup.py
app/entities/: ilsvrc_info.py  vgg_16_image.py
app/interactors/: base_transform.py  ilsvrc_predictor.py
app/models/: ilsvrc_info_model.py  vgg_16_image.py  vgg_16_image_model.py
app/repositories/: ilsvrc_info_repository.py  vgg_16_image_repo.py  vgg_16_image_repository.py
tests/interactors/: test_ilsvrc_predictor.py
