[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["TsuMakoto <tsukamoto@fusic.co.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
Image = "^1.5.28"
matplotlib = "^3.2.1"
lab = "^6.0"
jupyterlab = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
